PluginManager: use more native features for the comparitor